Finished changing longitude and latitude to address - Weather1

--- a/Weather1/app/src/main/res/layout/activity_main.xml
+++ b/Weather1/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,35 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <EditText
+        android:id = "@+id/et_LatInput"
+        android:hint = "Input Lat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id = "@+id/et_LonInput"
+            android:hint = "Input Lon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:text = "Find Address"
+            android:id= "@+id/btn_AddressStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:id = "@+id/tv_AddressTextView"
+        android:text="Please Start Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
