--- a/Gps1/app/src/main/res/layout/activity_main.xml
+++ b/Gps1/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,18 @@
     tools:context="zolup.gps1.MainActivity">
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/Latitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/Longitude"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/btn_start"
+        android:text="start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
